[package]
name = "debridge_anchor_extensions"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anchor30 = []

[dependencies]
debridge_anchor_extensions_macro = { path = "../debridge_anchor_extensions_macro" }
anchor-lang = { version = "0.30", optional = true }

[dev-dependencies]
anchor-lang = { version = "0.30" }
anchor-spl = { version = "0.30" }
bytemuck = "1.14.3"
