[package]
name = "debridge_anchor_extensions"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
debridge_anchor_extensions_macro = { path = "../debridge_anchor_extensions_macro" }

[dev-dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }
bytemuck = "1.14.3"
